# dendritron-starter-kit

./: .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NOTICE  README.md  SECURITY.md  SHA256SUMS.txt  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  experiment.yml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/archive/: Dendritron_Minsky_Benchmark_v0_1_README.md  Dendritron_Minsky_Benchmark_v0_2.ipynb  Dendritron_Minsky_Benchmark_v0_2_README.md  Dendritron_Mixed_Geometry_Tissue_v0_9_README.md  Dendritron_Plasticity_Limit_Sweep_v0_8.ipynb  Dendritron_Plasticity_Limit_Sweep_v0_8_README.md  Dendritron_SmolLM2_360M_Showcase_v4_2_FINAL.ipynb  Dendritron_SmolLM2_360M_Showcase_v4_2_FINAL_README.md  Dendritron_Tissue_Benchmark_v0_3_README.md  Dendritron_Tissue_Benchmark_v0_4.ipynb  Dendritron_Tissue_Benchmark_v0_4_README.md  Dendritron_Tissue_Compiler_v0_5.ipynb  Dendritron_Tissue_Compiler_v0_5_README.md  dendritron_minsky_benchmark_v0_1.py  dendritron_minsky_benchmark_v0_2.py  dendritron_mixed_geometry_v0_9.py  dendritron_optdigits_README.txt  dendritron_optdigits_benchmark.py  dendritron_plasticity_benchmark_v0_7.py  dendritron_plasticity_limit_sweep_v0_8.py  dendritron_smollm2_360m_showcase_v4_2_FINAL.py  dendritron_tissue_benchmark_v0_3.py
benchmarks/results/reference/: RESULTS.md  dendritron_optdigits_damage_summary.csv  dendritron_optdigits_parameter_budget.csv  dendritron_smollm2_modes.csv  (+4 more)
configs/: core.yaml  mixed_geometry.yaml  transformer_smollm2.yaml
dist-final/: dendritron_starter_kit-0.1.0-py3-none-any.whl
docs/: ARCHITECTURE.md  EQUATIONS.md  EXPERIMENTS.md  EXTENDING.md  PUBLISHING.md  START_HERE.md  TRANSFORMER_MEMORY.md
examples/: continual_plasticity.py  functional_memory.py  mixed_geometry.py  quickstart_boolean.py
gpu/hip/: Makefile  README.md  bench_gpu_vs_cpu.py  correctness_test.py  dendritron_hip.py  dendritron_rbf.hip.cpp  reproduce_forward.py
notebooks/: 00_complete_starter_kit.ipynb
src/dendritron/: __init__.py  benchmarks.py  boolean.py  branches.py  cli.py  gating.py  geometry.py  memory.py  mixed_geometry.py  plasticity.py  primitive.py  tissue.py  transformer.py  types.py
tests/: test_boolean.py  test_cli.py  test_gating.py  test_geometry.py  test_memory.py  test_plasticity.py  test_primitive.py  test_tissue.py
