[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritron-starter-kit"
version = "0.1.0"
description = "Reference implementations and reproducible experiments for Dendritron multicompartment architectures."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Richard A. Aragon"}]
keywords = ["dendritron", "continual-learning", "hyperbolic-geometry", "neural-architecture", "functional-memory"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10"]
research = ["pandas>=2", "scikit-learn>=1.3", "matplotlib>=3.8", "scipy>=1.10"]
transformer = ["torch>=2.2", "transformers>=4.44", "peft>=0.12", "accelerate>=0.33", "scikit-learn>=1.3"]
geometry = ["geoopt>=0.5"]
all = [
  "pandas>=2", "scikit-learn>=1.3", "matplotlib>=3.8", "scipy>=1.10",
  "torch>=2.2", "transformers>=4.44", "peft>=0.12", "accelerate>=0.33",
  "geoopt>=0.5",
]

[project.scripts]
dendritron = "dendritron.cli:main"

[project.urls]
Documentation = "https://github.com/OWNER/dendritron-starter-kit/tree/main/docs"
Source = "https://github.com/OWNER/dendritron-starter-kit"
Issues = "https://github.com/OWNER/dendritron-starter-kit/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
packages = ["dendritron"]

[[tool.mypy.overrides]]
module = [
  "numpy", "numpy.*",
  "torch", "torch.*",
  "transformers", "transformers.*",
  "peft", "peft.*",
]
ignore_missing_imports = true
follow_imports = "skip"
